objects/Risk_Start_System__c.object
<CustomObject>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fab/SCM requested for linear loading</fullName>
                </value>
                <value>
                    <fullName>Oversubscribed in later quarters</fullName>
                </value>
                <value>
                    <fullName>Sort/Line yield compensation</fullName>
                </value>
                <value>
                    <fullName>Strategic for revenue upside</fullName>
                </value>
                <value>
                    <fullName>To meet customer CRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Scrap__c</fullName>
        <inlineHelpText>Enter reason for scrap in the following format :

1.................................................; 2............................................. ; 3.......................................................</inlineHelpText>
        <label>Reason for Scrap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Void__c</fullName>
        <inlineHelpText>Enter reason for void in the follwing format :

1........................................ ; 2. .................................................. ; 3.........................................................</inlineHelpText>
        <label>Reason for Void</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Write_Off__c</fullName>
        <inlineHelpText>Please enter the reason for write-off in the following format :

1.................................; 2.........................................; 3...........................................</inlineHelpText>
        <label>Reason for Write-Off</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Device__c</fullName>
        <inlineHelpText>Please key in the full Device ID</inlineHelpText>
        <label>Recommended Device</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Quantity__c</fullName>
        <label>Recommended Wafer Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_Head_Action_Date__c</fullName>
        <description>Region Head Action Date</description>
        <inlineHelpText>Region Head Action Date</inlineHelpText>
        <label>Region Head Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Regional_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Regional_Head</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requesting_Customer__c</fullName>
        <label>REQUESTING CUSTOMER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCRAP__c</fullName>
        <label>SCRAP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_QTY__c</fullName>
        <inlineHelpText>Please enter the Sales Order Number and Qty in the following format ;

1 #.........(QTY) ; 2 #............(QTY) ; 3 #..................(QTY)</inlineHelpText>
        <label>SO # (QTY)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Start_System1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scrap_Cycle_Time__c</fullName>
        <label>Scrap Cycle Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scrap_Date__c</fullName>
        <inlineHelpText>Please enter the Scrap Date in the following format :

(MM/DD/YY) ; (MM/DD/YY) ; (MM/DD/YY)</inlineHelpText>
        <label>Scrap Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Approval_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Second pending approval reminder in day</description>
        <inlineHelpText>Second pending approval reminder in day</inlineHelpText>
        <label>Second Approval Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved &amp; Pending Conversion</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Pending Pricing Inputs</fullName>
                </value>
                <value>
                    <fullName>Pending Customer Planning Inputs</fullName>
                </value>
                <value>
                    <fullName>Pending SCM &amp; Business Ops. Approval</fullName>
                </value>
                <value>
                    <fullName>Pending SVP Gen. Mgmt. / SVP &amp; GM Fab Mgmt. Approval</fullName>
                </value>
                <value>
                    <fullName>Pending VP Finance Approval</fullName>
                </value>
                <value>
                    <fullName>Conversion in Progress</fullName>
                </value>
                <value>
                    <fullName>Conversion Completed</fullName>
                </value>
                <value>
                    <fullName>Pending Sales Account Manager Inputs</fullName>
                </value>
                <value>
                    <fullName>Pending PLM and Regional Head Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10XM</fullName>
                </value>
                <value>
                    <fullName>14LPE</fullName>
                </value>
                <value>
                    <fullName>14LPP</fullName>
                </value>
                <value>
                    <fullName>14LPX</fullName>
                </value>
                <value>
                    <fullName>14XM</fullName>
                </value>
                <value>
                    <fullName>20LPM</fullName>
                </value>
                <value>
                    <fullName>22FDSOI</fullName>
                </value>
                <value>
                    <fullName>28A</fullName>
                </value>
                <value>
                    <fullName>28FDSOI</fullName>
                </value>
                <value>
                    <fullName>28HPM</fullName>
                </value>
                <value>
                    <fullName>28HPP</fullName>
                </value>
                <value>
                    <fullName>28LPH</fullName>
                </value>
                <value>
                    <fullName>28LPH-N</fullName>
                </value>
                <value>
                    <fullName>28LPQ</fullName>
                </value>
                <value>
                    <fullName>28LPS</fullName>
                </value>
                <value>
                    <fullName>28-LP-TI</fullName>
                </value>
                <value>
                    <fullName>28RMG-IMC</fullName>
                </value>
                <value>
                    <fullName>28SHP</fullName>
                </value>
                <value>
                    <fullName>28SLP</fullName>
                </value>
                <value>
                    <fullName>28SLP_RF</fullName>
                </value>
                <value>
                    <fullName>28SLP-ST</fullName>
                </value>
                <value>
                    <fullName>28U</fullName>
                </value>
                <value>
                    <fullName>32SOI</fullName>
                </value>
                <value>
                    <fullName>40BCDlite</fullName>
                </value>
                <value>
                    <fullName>40G</fullName>
                </value>
                <value>
                    <fullName>40LP</fullName>
                </value>
                <value>
                    <fullName>40LP_RF</fullName>
                </value>
                <value>
                    <fullName>45LP</fullName>
                </value>
                <value>
                    <fullName>45SOI</fullName>
                </value>
                <value>
                    <fullName>55DDL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Approval_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Third pending approval reminder in day</description>
        <inlineHelpText>Third pending approval reminder in day</inlineHelpText>
        <label>Third Approval Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_PO_Quantity__c</fullName>
        <inlineHelpText>Please add the total PO qty and update this field</inlineHelpText>
        <label>Total PO Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PX1__c</fullName>
        <formula>PX_BTS1__c  +  PX_WIP_FG1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PX2__c</fullName>
        <formula>PX_BTS2__c + PX_WIP_FG2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PX3__c</fullName>
        <formula>PX_BTS3__c  +  PX_WIP_FG3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total PX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scrap_Qty__c</fullName>
        <inlineHelpText>Please add the total scrapped qty and update this field</inlineHelpText>
        <label>Total Scrap Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Void_Qty__c</fullName>
        <inlineHelpText>Please add the total voided qty and update this field</inlineHelpText>
        <label>Total Void Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Write_Off_Qty__c</fullName>
        <inlineHelpText>Please add the total written off qty and update this field</inlineHelpText>
        <label>Total Write-Off Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOID__c</fullName>
        <label>VOID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Business_Action_Dates__c</fullName>
        <description>VP Business Action Dates</description>
        <inlineHelpText>VP Business Action Dates</inlineHelpText>
        <label>VP Business Action Dates</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VP_Management_FAB_Approval__c</fullName>
        <description>VP Management FAB Approval</description>
        <inlineHelpText>VP Management FAB Approval</inlineHelpText>
        <label>VP Management FAB Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void_Cycle_Time__c</fullName>
        <label>Void Cycle Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <inlineHelpText>Please enter the void date in the following format :

(MM/DD/YY) ; (MM/DD/YY) ; (MM/DD/YY) ;  (MM/DD/YY)</inlineHelpText>
        <label>Void Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Void_Quantity1__c</fullName>
        <label>Void Quantity1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WRITE_OFF__c</fullName>
        <label>WRITE-OFF</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Cycle_Time__c</fullName>
        <label>Write Off Cycle Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Write_Off_Date__c</fullName>
        <inlineHelpText>Enter the Write-off date in the below format :

(MM/DD/YY) ; (MM/DD/YY) ; (MM/DD/YY) ; (MM/DD/YY)</inlineHelpText>
        <label>Write-Off Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Write_Off_Quantity_1__c</fullName>
        <label>Write-Off Quantity 1</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk Start</label>
    <listViews>
        <fullName>Fab_8_Risk_Start</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Recommended_Device__c</columns>
        <columns>Date_Raised__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>Fab 8</value>
        </filters>
        <label>Fab 8 Risk Start</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fab_9_10_Risk_Start</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Recommended_Device__c</columns>
        <columns>Date_Raised__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FAB__c</field>
            <operation>equals</operation>
            <value>Fab 9,Fab 10</value>
        </filters>
        <label>Fab 9,10 Risk Start</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Account_Manager_s_Approval</fullName>
        <columns>NAME</columns>
        <columns>Account_Team_Proxy__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>FAB__c</columns>
        <columns>REQUESTED_DEVICE__c</columns>
        <columns>Requesting_Customer__c</columns>
        <columns>REQUESTING_FAB__c</columns>
        <columns>Status__c</columns>
        <columns>Cummulative_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending VP Finance Approval</value>
        </filters>
        <label>Pending VP Finance</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_SCM_and_Biz_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>FAB__c</columns>
        <columns>REQUESTED_DEVICE__c</columns>
        <columns>Requesting_Customer__c</columns>
        <columns>REQUESTING_FAB__c</columns>
        <columns>Cummulative_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending SCM &amp; Business Ops. Approva</value>
        </filters>
        <label>Pending SCM and Biz Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Risk_Start_Approval_Pending_KC</fullName>
        <columns>NAME</columns>
        <columns>FAB__c</columns>
        <columns>Date_Raised__c</columns>
        <columns>Recommended_Device__c</columns>
        <columns>PX_Request_Revenue__c</columns>
        <columns>Recommended_Quantity__c</columns>
        <columns>Status__c</columns>
        <columns>Age_of_FAB_Approval__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending SVP Gen. Mgmt. / SVP &amp; GM Fab Mgmt. Approval</value>
        </filters>
        <label>Risk Start Approval Pending KC</label>
        <sharedTo>
            <group>KC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>FAB__c</columns>
        <columns>Status__c</columns>
        <columns>Recommended_Quantity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Default View</label>
    </listViews>
    <nameField>
        <displayFormat>RSF-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Risk Start Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Start</pluralLabel>
    <recordTypes>
        <fullName>Central_Planning</fullName>
        <active>true</active>
        <label>Central Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conversion_Risk_Start_System_Read_Only</fullName>
        <active>true</active>
        <description>Read only for the fields once status is conversion complete</description>
        <label>Conversion Risk Start System Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Planning</fullName>
        <active>true</active>
        <label>Customer Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>PostApproval</fullName>
        <active>true</active>
        <label>PostApproval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pricing</fullName>
        <active>true</active>
        <label>Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Account_Manager</fullName>
        <active>true</active>
        <label>Sales Account Manager</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Adjusted_Demand_and_PO_Coverage_Missing</fullName>
        <active>true</active>
        <description>Adjusted Demand and PO Coverage input must be  at least 1 entry and can be 0</description>
        <errorConditionFormula>AND(ISNULL(Qtr_0__c), ISNULL(Qtr_0_PO_Coverage__c), ISNULL(Qtr_1__c), ISNULL(Qtr_1_PO_Coverage__c), ISNULL(Qtr_2__c), ISNULL(Qtr_2_PO_Coverage__c), ISNULL(Qtr_3__c), ISNULL(Qtr_3_PO_Coverage__c)) &amp;&amp; ISPICKVAL(Status__c, &quot;Draft&quot;)</errorConditionFormula>
        <errorDisplayField>Qtr_3__c</errorDisplayField>
        <errorMessage>The above Qtr 0,1,2,3 Adjusted Demand and PO Coverage input must have at least 1 entry and can be 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Balance_Quantity_Validation</fullName>
        <active>true</active>
        <description>Balance_Quantity_Validation</description>
        <errorConditionFormula>IF(Balance_Qty__c  &lt; 0, TRUE, FALSE)</errorConditionFormula>
        <errorMessage>Balance Quantity Cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Unit_required_for_Fab_9_10</fullName>
        <active>true</active>
        <description>Business Unit is required</description>
        <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Draft&apos;), ISBLANK(Text(Business_Unit__c)))</errorConditionFormula>
        <errorDisplayField>Business_Unit__c</errorDisplayField>
        <errorMessage>Please select the business unit of the Risk Start Part.
Business Unit will be used to route Risk Start to respective PLM approvers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cum_Revenue_Required_in_Fab_8</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Cum_Revenue__c) &amp;&amp; ISPICKVAL(Status__c, &quot;Draft&quot;) &amp;&amp;   ISPICKVAL(FAB__c, &quot;Fab 8&quot;)</errorConditionFormula>
        <errorDisplayField>Cum_Revenue__c</errorDisplayField>
        <errorMessage>Cum Revenue $ is mandatory in Fab 8 Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Design_Change_Expected</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Status__c,&apos;Pending Sales Account Manager Inputs&apos;), ISPICKVAL(Is_customer_design_change_expected__c,&apos;Yes&apos;),  ISBLANK(If_Yes_state_revision_layers_and_expe__c) )</errorConditionFormula>
        <errorDisplayField>If_Yes_state_revision_layers_and_expe__c</errorDisplayField>
        <errorMessage>Field &quot;If Yes, Revision Layers , Expected Time&quot; is mandatory when &quot;Is customer design change expected&quot; field value is &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ED_should_not_be_less_that_PSD</fullName>
        <active>true</active>
        <description>End Date should not be ess than Plan Start Date</description>
        <errorConditionFormula>IF((End_Date__c &lt;   DATEVALUE( CreatedDate ) ) || (End_Date__c &lt;  Plan_Start_Date__c ), true, false)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Plan End date should not be null or should not be less than Plan Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExpShipDate_grater_than_Exp_Po_Date</fullName>
        <active>true</active>
        <description>Expected Shipment Date should be greater than Expected PO Date</description>
        <errorConditionFormula>IF(Expected_Shipment_Date__c &lt;= Expected_PO_Date__c, true, false)</errorConditionFormula>
        <errorDisplayField>Expected_Shipment_Date__c</errorDisplayField>
        <errorMessage>Expected Shipment Date should be greater than Expected PO Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exp_PO_date_should_not_be_past_date</fullName>
        <active>true</active>
        <description>Exp_PO_date_should_not_be_past_date</description>
        <errorConditionFormula>IF((Expected_PO_Date__c  &lt;  DATEVALUE( CreatedDate ) ) || (Expected_PO_Date__c  &lt; Plan_Start_Date__c ), true, false)</errorConditionFormula>
        <errorDisplayField>Expected_PO_Date__c</errorDisplayField>
        <errorMessage>Expected PO date should not be a past date or should not be less than Plan Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Planning_Endorsement_is_selected_No</fullName>
        <active>true</active>
        <errorConditionFormula>IF( TEXT( Planning_Endorsement__c ) = &apos;No&apos;  &amp;&amp;  ISBLANK( Enter_Reason_if_Planning_Endorsment_No__c )  , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Enter_Reason_if_Planning_Endorsment_No__c</errorDisplayField>
        <errorMessage>Please key in the reason for selecting Planning Endorsement as No</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Device_Qualified_Required_in_Fab_8</fullName>
        <active>false</active>
        <errorConditionFormula>ISBlank(Is_PX_Requested_Device_Qualified__c) &amp;&amp; ISPICKVAL(Status__c, &quot;Draft&quot;) &amp;&amp;   ISPICKVAL(FAB__c, &quot;Fab 8&quot;)
&amp;&amp; $Profile.Name  &lt;&gt; &apos;GF Integration&apos;</errorConditionFormula>
        <errorDisplayField>Is_PX_Requested_Device_Qualified__c</errorDisplayField>
        <errorMessage>Is PX Requested Device Qualified? is mandatory in Fab 8 Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PX_Discounted_Status</fullName>
        <active>false</active>
        <errorConditionFormula>IF( TEXT(PX_discounted_for_past_12_mths__c) = &apos;Yes&apos;  &amp;&amp;  ISBLANK(If_Yes_state_revision_discount__c)  , TRUE, FALSE)
&amp;&amp; $Profile.Name  &lt;&gt; &apos;GF Integration&apos;</errorConditionFormula>
        <errorDisplayField>If_Yes_state_revision_discount__c</errorDisplayField>
        <errorMessage>This field is mandatory if PX Discounted for Past 12 Months is Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PX_Request_Revenue_Required_in_Fab_8</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(PX_Request_Revenue__c) &amp;&amp; ISPICKVAL(Status__c, &quot;Draft&quot;) &amp;&amp;   ISPICKVAL(FAB__c, &quot;Fab 8&quot;)</errorConditionFormula>
        <errorDisplayField>PX_Request_Revenue__c</errorDisplayField>
        <errorMessage>PX Request Revenue is mandatory in Fab 8 Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Plan_Start_Date__c &lt;  DATEVALUE( CreatedDate) ,TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Plan_Start_Date__c</errorDisplayField>
        <errorMessage>Plan Start Date cannot be a past date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_for_Request_is_required</fullName>
        <active>true</active>
        <description>Reason for Request is required</description>
        <errorConditionFormula>ISPICKVAL(Status__c , &quot;Draft&quot;) &amp;&amp; ISPICKVAL( Reason_for_Request__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Reason_for_Request__c</errorDisplayField>
        <errorMessage>Reason for Request is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requesting_Customer_or_Device_Missing</fullName>
        <active>true</active>
        <description>Requesting Customer or Requested Device Missing; BTS, WIP, FG must be at least 1 entry, can be 0</description>
        <errorConditionFormula>AND(ISBlank(PX_BTS1__c), ISBlank(PX_BTS3__c), ISBlank(PX_WIP_FG1__c), ISBlank(PX_WIP_FG3__c))&amp;&amp; (  RecordType.Name  =  &quot;Customer Planning&quot;)</errorConditionFormula>
        <errorDisplayField>PX_WIP_FG1__c</errorDisplayField>
        <errorMessage>Requesting Customer or Requested Device Missing BTS, WIP,+FG #. Please update PX BTS &amp; PX WIP + FG fields above. Must have at least 1 entry, can be 0.</errorMessage>
    </validationRules>
</CustomObject>